fix: Fix header visibility in dark mode
And tweak the background contrast

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,8 +22,8 @@
       @apply text-accent-light-1;
     }
     body {
-      @apply bg-slate-900 text-on-dark;
-      @apply scrollbar-track-slate-800;
+      @apply bg-slate-800 text-on-dark;
+      @apply scrollbar-track-slate-900;
     }
   }
 }
